--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Organization</h1>
 <%=form_for @organization, url: organizations_path, method: :post do |f|%>
-	<%=f.text_field :name%>
+	<%=f.label :name%>
+	<%=f.text_field :name%><br/>
 	<%=f.submit%>
 <%end%>
