--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,7 +1,8 @@
+<%=link_to 'Home', root_path%>
 <h1>Contact View</h1>
 <table class="table-bordered">
   <!-- For filter purpose of contacts-->
-  <%= form_tag organization_path(@org.id), :method => 'get', :id => "contacts_search" do %>
+  <%= form_tag organization_path(@org.id), method: :get, id: "contacts_search" do %>
     <thead>
         <tr>
           <% @org.org_fields.each do | single_org | %>
@@ -12,10 +13,10 @@
   <% end %>
 </table>
 <!-- For display contacts list-->
-<div id="cresults_div"><%= render 'contacts/cresults', :org => @org %></div>
+<div id="cresults_div"><%= render 'contacts/cresults', org: @org %></div>
 
 <script type="text/javascript">
-  $(function() {
+  $(function(){
     <% @org.org_fields.each do | single_org | %>
 	    $("#<%= single_org.field_no %>").keyup(function() {
 	      $.get($("#contacts_search").attr("action"), $("#contacts_search").serialize(), null, "script");
