--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,27 +1,78 @@
-<%=link_to 'Home', root_path%>
-<h1>Contact View</h1>
-<table class="table-bordered">
-  <!-- For filter purpose of contacts-->
-  <%= form_tag organization_path(@org.id), method: :get, id: "contacts_search" do %>
+<%#=link_to 'Home', root_path%>
+<div class="stick" id="header_div">  
+  <table class="table-bordered">
+    <!-- For filter purpose of contacts-->
     <thead>
+      <%= form_tag organization_path(@org.id), method: :get, id: "contacts_search" do %>
         <tr>
           <% @org.org_fields.each do | single_org | %>
-            <td><input id="<%= single_org.field_no %>" name="search_field[<%= single_org.field_no %>]" type="text"><%#= text_field_tag :first_name %></td>
+            <td><input id="<%= single_org.field_no %>" name="search_field[<%= single_org.field_no %>]" type="text" placeholder="Search <%= single_org.name %>"><%#= text_field_tag :first_name %></td>
           <% end %>
+         <!--  <td class="last_column"><input type="checkbox"  id="select_all"/></td> -->
         </tr>
+      <% end %>
+      <%if @org.present?%>
+        <tr>
+          <% @org.org_fields.each do | single_org | %>
+            <th><%= single_org.name %></th>
+          <% end %>
+          <th class="last_column">
+            <%# if @org.org_fields.count != 10 %>
+              <b><%=link_to '+',organization_new_fields_path(@org.id)%></b>
+            <%# end %>
+          </th>
+        </tr>
+      <% end %>
     </thead>
-  <% end %>
-</table>
+  </table>
+</div>
 <!-- For display contacts list-->
 <div id="cresults_div"><%= render 'contacts/cresults', org: @org %></div>
 
+<div class="stick" id="footer_div">  
+  <div class="pull-right">
+    <div class='fancy-file'>
+      Upload CSV:
+      <img class ="state" src="../assets/Upload.png" style="height: 35px; width: 41px;" Title="Upload CSV"/> 
+      <div class='input-container'>
+        <input type='file' onchange="uploadFile(this.files)" style="height: 45px; width: 45px;">
+      </div>
+    </div>
+    <div style="margin-top: -40px ! important;">
+      Download CSV:
+      <%= link_to image_tag("Download.png", :border => 0, :style=>"width: 41px; height: 35px;",:title=>"Downlod CSV"),organization_path(format: "csv")%>
+      <button id="merge_button" >Remove</button>
+    </div>
+  </div>
+  <table class="table-bordered delete_icon">
+    <tr>
+      <%=form_for :contact, url: contacts_path, method: :post do |f|%>
+        <% @org.org_fields.each do | single_org | %>
+        <td>
+          <%=f.text_field "#{single_org.field_no}", :class=>"footer_input", :placeholder=>single_org.name%>
+        </td>
+        <% end %>
+        <td><%=f.collection_select :group_id, @groups, :id, :name%></td>
+        <td><%=f.submit 'save', :style=>"width:54px;"%></td>
+      <%end%>
+    </tr>
+  </table>
+</div>
+
 <script type="text/javascript">
-  $(function(){
-    <% @org.org_fields.each do | single_org | %>
-	    $("#<%= single_org.field_no %>").keyup(function() {
-	      $.get($("#contacts_search").attr("action"), $("#contacts_search").serialize(), null, "script");
-	      return false;
-    });
-    <% end %>
-  });
+
+$("#merge_button").click(function(event){
+    event.preventDefault();
+    var searchIDs = $("input:checkbox:checked").map(function(){
+      return $(this).val();
+    }).get(); // <----
+
+    $.ajax({
+        type: "delete",
+        url: "<%= destroy_contacts_path %>", //sumbits it to the given url of the form
+        data: { selected_contact_ids: searchIDs }
+    })
+    return false; // prevents normal behaviour
+});
+
 </script>
