--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -8,7 +8,7 @@
           <% @org.org_fields.each do | single_org | %>
             <td><input id="<%= single_org.field_no %>" name="search_field[<%= single_org.field_no %>]" type="text" placeholder="Search <%= single_org.name %>"><%#= text_field_tag :first_name %></td>
           <% end %>
-         <!--  <td class="last_column"><input type="checkbox"  id="select_all"/></td> -->
+          <td class="last_column"><input type="checkbox"  id="select_all"/></td>
         </tr>
       <% end %>
       <%if @org.present?%>
@@ -29,14 +29,20 @@
 <!-- For display contacts list-->
 <div id="cresults_div"><%= render 'contacts/cresults', org: @org %></div>
 
-<div class="stick" id="footer_div">  
+<div class="stick" id="footer_div"> 
+  
   <div class="pull-right">
     <div class='fancy-file'>
       Upload CSV:
       <img class ="state" src="../assets/Upload.png" style="height: 35px; width: 41px;" Title="Upload CSV"/> 
-      <div class='input-container'>
-        <input type='file' onchange="uploadFile(this.files)" style="height: 45px; width: 45px;">
-      </div>
+        <div class='input-container'>
+          <%= form_for @person, :url=>upload_csv_path, :html => {multipart: true} do |f| %>
+            <%= file_field_tag "file", :onchange=> "uploadFile()" , :style=>"height: 45px; width: 45px;" %>
+            <%= hidden_field_tag "default_group_id", @groups.first.id%>
+            <%= f.submit "submit", :id=>"submit_csv_form" %>
+          <% end %>
+        </div>
+      
     </div>
     <div style="margin-top: -40px ! important;">
       Download CSV:
@@ -61,18 +67,22 @@
 
 <script type="text/javascript">
 
-$("#merge_button").click(function(event){
-    event.preventDefault();
-    var searchIDs = $("input:checkbox:checked").map(function(){
-      return $(this).val();
-    }).get(); // <----
+// $("#merge_button").click(function(event){
+//     event.preventDefault();
+//     var searchIDs = $("input:checkbox:checked").map(function(){
+//       return $(this).val();
+//     }).get(); // <----
 
-    $.ajax({
-        type: "delete",
-        url: "<%= destroy_contacts_path %>", //sumbits it to the given url of the form
-        data: { selected_contact_ids: searchIDs }
-    })
-    return false; // prevents normal behaviour
-});
+//     $.ajax({
+//         type: "delete",
+//         url: "<%= destroy_contacts_path %>", //sumbits it to the given url of the form
+//         data: { selected_contact_ids: searchIDs }
+//     })
+//     return false; // prevents normal behaviour
+// });
+
+function uploadFile() {
+  $( "#submit_csv_form" ).trigger( "click" )
+}
 
 </script>
