--- a/app/views/organizations/new_fields.html.erb
+++ b/app/views/organizations/new_fields.html.erb
@@ -2,7 +2,7 @@
 <%=form_for :org_fields, url: organization_create_fields_path(params[:organization_id]), method: :post do |f| %>
    <%=f.hidden_field :organization_id, value: params[:organization_id]%>
    <%=f.label :field_no%>
-   <%= f.select :field_no, options_for_select([["select field", ""], "f1", "f2", "f3", "f4", "f5", "f6", "f7", "f8", "f9", "f10"]) %><br/>
+   <%= f.select :field_no, options_for_select(@fields) %><br/>
    <%=f.label :name%>
    <%=f.text_field :name%><br/>
    <%=f.label :data_type%>
