--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -40,7 +40,7 @@
       Upload CSV:
       <img class ="state" src="../assets/Upload.png" style="height: 35px; width: 41px;" Title="Upload CSV"/> 
         <div class='input-container'>
-          <%= form_for @person, :url=>upload_csv_path, :html => {multipart: true} do |f| %>
+          <%= form_for @organisation, :url=>upload_csv_path, :html => {multipart: true} do |f| %>
             <%= file_field_tag "file", :onchange=> "uploadFile()" , :style=>"height: 45px; width: 45px;" %>
             <%= hidden_field_tag "default_group_id", @groups.first.id%>
             <%= f.submit "submit", :id=>"submit_csv_form" %>
@@ -93,4 +93,15 @@ function uploadFile() {
   $( "#submit_csv_form" ).trigger( "click" )
 }
 
+</script>
+
+<script type="text/javascript">
+  $(function(){
+    <% @org.org_fields.each do | single_org | %>
+      $("#<%= single_org.field_no %>").keyup(function() {
+        $.get($("#contacts_search").attr("action"), $("#contacts_search").serialize(), null, "script");
+        return false;
+    });
+    <% end %>
+  });
 </script>
