--- a/app/views/organizations/groups.html.erb
+++ b/app/views/organizations/groups.html.erb
@@ -1,6 +1,6 @@
 <h1>Groups of <%=@org.name%></h1>
 <p><%=link_to 'New group',organization_new_group_path(params[:organization_id])%></p>
-<table>
+<table class="table-bordered" style="width:300px !important">
 	<tr>
 		<th>Name</th>
 	</tr>
