--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,7 +1,16 @@
 <h1>Organization listing</h1>
 <%=link_to 'New Organization', new_organization_path%><br/>
-<%@orgs.each do |org|%>
-	<%=link_to org.name, org%>&nbsp;&nbsp;&nbsp;&nbsp;
-	<%=link_to 'groups' , organization_groups_path(org.id)%>&nbsp;&nbsp;&nbsp;&nbsp;
-	<%=link_to 'Delete', org , method: :delete, data: {confirm: "Are you sure"}%><br/>
-<%end%>
+<table class="table-bordered">
+	<tr>
+		<th>Organisation Name</th>
+		<th></th>
+		<th></th>
+	</tr>
+	<%@orgs.each do |org|%>
+		<tr>
+			<td><%=link_to org.name, org%></td>
+			<td><%=link_to 'Create Groups' , organization_groups_path(org.id)%></td>
+			<td><%=link_to 'Delete', org , method: :delete, data: {confirm: "Are you sure"}%><br/></td>
+		</tr>
+	<%end%>
+</table>
