--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,6 +1,14 @@
-<h1>New Organization</h1>
-<%=form_for @organization, url: organizations_path, method: :post do |f|%>
-	<%=f.label :name%>
-	<%=f.text_field :name%><br/>
-	<%=f.submit%>
-<%end%>
+<h1 >New Organization</h1>
+<br/>
+<table class="table" style="width:100px !important">
+	<%=form_for @organization, url: organizations_path, method: :post do |f|%>
+	<tr>
+		<th><%=f.label :name%></th>
+		<td><%=f.text_field :name%></td>
+	</tr>
+	<tr>
+		<th></th>
+		<td><%=f.submit :class=>"btn btn-success" %></td>
+	</tr>
+	<%end%>
+</table>
