--- a/app/views/organizations/new_group.html.erb
+++ b/app/views/organizations/new_group.html.erb
@@ -1,7 +1,14 @@
 <h1>New group</h1>
-<%=form_for :group, url: organization_create_group_path(params[:organization_id]), method: :post do |f| %>
-	<%=f.label :name%>
-	<%=f.text_field :name%><br/>
-	<%=f.hidden_field :organization_id, value: params[:organization_id]%>
-	<%=f.submit%>
-<%end%>
+<br/>
+<table class="table" style="width:100px !important">
+	<%=form_for :group, url: organization_create_group_path(params[:organization_id]), method: :post do |f| %>
+	<tr>
+		<th><%=f.label :name%></th>
+		<td><%=f.text_field :name%></td>
+	</tr>
+	<tr>
+		<th><%=f.hidden_field :organization_id, value: params[:organization_id]%></th>
+		<td><%=f.submit :class=>"btn btn-primary" %></td>
+	</tr>
+	<%end%>
+</table>
