--- a/app/views/contacts/_cresults.html.erb
+++ b/app/views/contacts/_cresults.html.erb
@@ -1,4 +1,4 @@
-<table class="table-bordered delete_icon">
+<table class="table-bordered delete_icon" style="margin-bottom: 70px;">
   <%if org.present?%>
     <% @contacts.each do |contact|%>
       <tr>
