--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -102,7 +102,9 @@
       });
   });
 
+</script>
 
+<script>
   $(function(){
     <% @org.org_fields.each do | single_org | %>
       $("#<%= single_org.field_no %>").keyup(function() {
@@ -112,6 +114,4 @@
     });
     <% end %>
   });
-
-
 </script>
