--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -2,13 +2,13 @@
 <div class="stick" id="header_div">  
   <table class="table-bordered header">
     <!-- For filter purpose of contacts-->
-    <thead>
       <%= form_tag organization_path(@org.id), method: :get, id: "contacts_search" do %>
         <tr>
           <% @org.org_fields.each do | single_org | %>
             <td><input id="<%= single_org.field_no %>" name="search_field[<%= single_org.field_no %>]" type="text" placeholder="Search <%= single_org.name %>" class="input_textboxes"><%#= text_field_tag :first_name %></td>
           <% end %>
-          <td></td>
+            <td></td>
+            <td class="last_column">All<input type="checkbox"  id="select_all"/></td> 
         </tr>
       <% end %>
       <%if @org.present?%>
@@ -17,24 +17,14 @@
             <th><%= single_org.name %></th>
           <% end %>
           <th><%= "Group" %></th>
-        </tr>
-      <% end %>
-    </thead>
-  </table>
-
-  <table class="table-bordered last_column_table">
-        <tr>
-          <td class="last_column">All<input type="checkbox"  id="select_all"/></td>
-        </tr>
-      <%if @org.present?%>
-        <tr>
           <th class="last_column">
             <b><%=link_to '+',organization_new_fields_path(@org.id)%></b>
           </th>
         </tr>
       <% end %>
-
   </table>
+
+
 </div>
 <!-- For display contacts list-->
 <div id="cresults_div"><%= render 'contacts/cresults', org: @org %></div>
@@ -44,7 +34,7 @@
   <div class="pull-right">
     <div class='fancy-file'>
       Upload CSV:
-      <%= image_tag("Upload.png", :border => 0, :style=>"width: 41px; height: 35px;",:title=>"Upload CSV", :class =>"state")%>
+      <%= image_tag("Upload.png", :border => 0, :style=>"width: 44px; height: 42px;",:title=>"Upload CSV", :class =>"state")%>
         <div class='input-container'>
           <%= form_for @organisation, :url=>upload_csv_path, :html => {multipart: true} do |f| %>
             <%= file_field_tag "file", :onchange=> "uploadFile()" , :style=>"height: 45px; width: 45px;" %>
@@ -90,6 +80,7 @@
 
 
   $("#remove_contacts").click(function(){
+      $(".load").show();
       var searchIDs = $("input:checkbox:checked").map(function(){
         return $(this).val();
       }).get(); // <----
@@ -98,7 +89,7 @@
           type: "post",
           url: "<%= destroy_contacts_path %>", //sumbits it to the given url of the form
           data: { selected_contact_ids: searchIDs },
-          success: function(){ $("#select_all").prop('checked', ""); return false; } 
+          success: function(){ $(".load").hide(); $("#select_all").prop('checked', "");  return false; } 
       });
   });
 
