show loader image on live

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -73,5 +73,5 @@ html, body, .load { height: 100%; width: 100%; }
   text-indent : 100%;
   font-size : 0;
   opacity: 0.47;
-  background : url("/assets/ajax-loader2.gif") center no-repeat #ccc;
+  background : url("/assets/images/ajax-loader2.gif") center no-repeat #ccc;
 }
