--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -67,7 +67,9 @@
   </table>
 </div>
 
-<div class="load" style="display:none; "></div>
+<div class="load" style="display:none;">
+  <%= image_tag("ajax-loader2.gif") %>
+</div>
 
 <script type="text/javascript">
 
